# arconstruction_backend

./: .env  .gitignore  AR Construction API.yaml  README.md  manage.py  pyproject.toml
backend/: asgi.py  settings.py  urls.py
blog/: admin.py  apps.py  models.py  serializers.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py
contact/: admin.py  apps.py  models.py  serializers.py  views.py
contact/migrations/: 0001_initial.py  0002_contactmessage_ip_address_contactmessage_user_agent.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
fixtures/: initial_site.json  sample_blog.json  sample_gallery.json  sample_services.json
mediahub/: admin.py  apps.py  filters.py  models.py  serializers.py  views.py
mediahub/migrations/: 0001_initial.py  0002_alter_galleryitem_image.py
notebooks/: main.ipynb
postman/: ARConstruction-API.postman_collection.json  run_postman_collection.py
postman/run_outputs/: Blog_Detail_by_slug.json  Blog_Detail_by_slug.meta.txt  Blog_List.json  Blog_List.meta.txt  Create_Contact_Message.json  Create_Contact_Message.meta.txt  Create_Quote_public.json  Create_Quote_public.meta.txt  Export_Quotes_Excel.meta.txt  Export_Quotes_PDF.meta.txt  Gallery.json  Gallery.meta.txt  Quotes_Dashboard.meta.txt  Service_Detail_shopfitting.json  Service_Detail_shopfitting.meta.txt  Services_List.json  Services_List.meta.txt  Site_Info.json  (+1 more)
quotes/: admin.py  filters.py  models.py  serializers.py  views.py
services/: admin.py  apps.py  models.py  serializers.py  views.py
utils/: tags.py
(+2 files in other folders)
